<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.sompod.lovecalculator.MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:src="@drawable/icon"
        android:id="@+id/imageView" android:contentDescription="@null"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginTop="133dp"
        android:gravity="center_horizontal"
        android:hint="@string/userhint"
        android:text="@string/name"
        android:textSize="40sp"
        android:textColor="@color/love_calculator"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="23dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:hint="@string/userhint"
            android:textColor="#000000"
            android:gravity="center"
            android:background="@drawable/login_backgraound"
            android:inputType="text" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_alignTop="@+id/editText"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@null"
            android:src="@drawable/user1" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:hint="@string/passhint"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:background="@drawable/login_backgraound"
            android:inputType="textPassword" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/editText2"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_marginBottom="5dp"
            android:contentDescription="@null"
            android:src="@drawable/pass2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editText2"
            android:layout_alignRight="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:text="@string/forget"
            android:textColor="#0006ff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="12dp"
            android:background="@drawable/singin_background"
            android:text="@string/login"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button"
            android:layout_alignRight="@+id/button"
            android:layout_below="@+id/button"
            android:text="@string/create_new"
            android:textColor="#fcff00"
            android:textSize="25sp"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/aboutandprivacy"
            android:textColor="#00d8db"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>





</RelativeLayout>
